src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_18_Digit_ID__c</fullName>
        <formula>CASESAFEID (Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Preferred_Name__c</fullName>
        <formula>Owner.Account_Owner_Preferred_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Preferred Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Detail_Popped_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To inform if the Advisor Detail pop up has been shown to the user or not.</description>
        <label>Advisor Detail Popped up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>Created for ACET Dashboard to store Agent Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Id__c</fullName>
        <description>This field stores the alternate member Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Advisor__c</fullName>
        <description>Name of the Account owner.  Used to display on list views.</description>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Advisor__c</fullName>
        <description>Name of Family Advisor the family is assigned to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_LOB_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to bypass validion for LOB/Product Type/Service Group validation</description>
        <label>Bypass LOB Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFS Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFS Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFS Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Referral_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EFS Referral Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complex Indicator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <description>Indicates whether this family will receive personalized support from you or another advisor going forward.</description>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>3rd Party/Sibling</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Researcher Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EHub_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Update eligibility hub api. Based on this value, system calls service.</description>
        <label>Eligibility Hub Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <description>Store provider or member id received from OIL. Use it for upserting Accounts used for storing providers and members</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Text(255) (External ID) (Unique Case Insensitive)</inlineHelpText>
        <label>EID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US2153934 - This check box is used for FamilyLink to send the email notifications to the users based on this indicator.</description>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FamilyLink_Registration_Date__c</fullName>
        <description>For recording the date that the member registered for FamilyLink (US2595317)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Advisor Connect Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_First_Contact_into_Center__c</fullName>
        <description>Defaults to Member Initiated Contact with the ability to change dropdown based on how the family was first referred into the FEC.</description>
        <label>Family First Contact into Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Initiated Contact</fullName>
                    <default>true</default>
                    <label>Member Initiated Contact</label>
                </value>
                <value>
                    <fullName>Neonatal Resource Services (NRS)</fullName>
                </value>
                <value>
                    <fullName>Phoenix Children&apos;s Care Network (PCCN)</fullName>
                </value>
                <value>
                    <fullName>ProHealth</fullName>
                </value>
                <value>
                    <fullName>Providers</fullName>
                </value>
                <value>
                    <fullName>SNI Lite Team</fullName>
                </value>
                <value>
                    <fullName>Social Media Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_ID__c</fullName>
        <description>System generated family ID.</description>
        <displayFormat>F-{000000}</displayFormat>
        <label>Family ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Family_Needs__c</fullName>
        <description>Auto populated based on whether there are any open opportunities for any family member. This allows you to know which families you have open actions for, this should be updated when a family is determined to be inactive.</description>
        <label>Family Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <description>Tells if family has any open cases/opportunities.</description>
        <label>Family Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Story__c</fullName>
        <description>Use this space to share the family’s story, in the parent’s words. This allows advisors who are not assigned to the family to quickly get up to speed on the background of the family.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>Family name for highlights panel</description>
        <formula>Name + &quot; &quot; + &quot;Family&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set when historical messages is available for that account</description>
        <label>Historical Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for Provider Group account status only</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Notification_Timestamp__c</fullName>
        <description>This field is used for storing last sent Email/SMS notification timestamp.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used for storing last sent Email/SMS notification timestamp.</inlineHelpText>
        <label>Last Notification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Family_ID__c</fullName>
        <description>Family ID from legacy system stored on family account</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legacy Family ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Member_ID__c</fullName>
        <description>Unique Individual identifier from legacy system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legacy Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Created this Field for C3 -  Family Account Page Implementation</description>
        <label>Line of Business </label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;S</fullName>
                </value>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>Member ID of family in SNI program and Styx Dashboard.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>E&amp;I = Member ID
C&amp;S = Medicaid Number</inlineHelpText>
        <label>Member ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_not_eligible_for_CAC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member not eligible for Care Advisor Connect</description>
        <inlineHelpText>Member not eligible for Care Advisor Connect</inlineHelpText>
        <label>Member not eligible for CAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motion_Eligible_Member_ID__c</fullName>
        <description>US2999796</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Motion Eligible Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motion_Registered_Member_ID__c</fullName>
        <description>US2999796</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Motion Registered Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiPolicyCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used for the pop up for multiple policy in SNI</description>
        <label>Multi Policy Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <description>Used to indicate if group has an Onshore restriction and to limit visibility of object</description>
        <label>Onshore Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of open cases for a family.  Used to update the Family Status field.</description>
        <label>Open Cases</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owned_By_Me__c</fullName>
        <description>Indicates if the family is assigned to the family is the same as the logged in user.</description>
        <formula>IF(   Owner.Id  = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned By Me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Par_Provider__c</fullName>
        <label>Par Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParticipantAdminAlias__c</fullName>
        <description>Created for WEX Health SSO connected app</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ParticipantAdminAlias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantEmployeeExternalId__c</fullName>
        <description>Created for WEX Health SSO Connected App</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ParticipantEmployeeExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantEmployerCode__c</fullName>
        <description>Created for WEX Health SSO Connected App</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ParticipantEmployerCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <description>Policy ID for the subscriber of the family.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Policy ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Offered__c</fullName>
        <label>Population Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Population</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Population</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Created this Field for C3 - Family Account Page Implementation</description>
        <label>Product Type </label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C3 FedEx</fullName>
                </value>
                <value>
                    <fullName>C3 Premier</fullName>
                </value>
                <value>
                    <fullName>C3 Sandbox</fullName>
                </value>
                <value>
                    <fullName>FI Adult</fullName>
                </value>
                <value>
                    <fullName>SNI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Associations_RichText__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Associations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program_Associations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Associations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Associations_formula__c</fullName>
        <formula>IF(CONTAINS(Program_Associations__c, &apos;;&apos;) ,  SUBSTITUTE(Program_Associations__c,&apos;;&apos;,BR()),&apos;&apos;)</formula>
        <label>Program Associations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Program__r.Id ,  TEXT(Program__r.Program__c),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Provider Affiliation</relationshipLabel>
        <relationshipName>Programs_Offered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programs_Offered__c</fullName>
        <label>Programs Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Contact_Preference__c</fullName>
        <label>Provider Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Group_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Team</relationshipLabel>
        <relationshipName>Provider_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider User</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Notes__c</fullName>
        <description>Quick Notes captured for a Member on Styx Dashboard.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quick Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Owner.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRK_KeyChain__c</fullName>
        <description>Store SRK Key Chain which is used for upserting Accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Text(255) (External ID) (Unique Case Insensitive)</inlineHelpText>
        <label>SRK KeyChain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Group__c</fullName>
        <description>Created this Field for C3 -  Family Account Page Implementation</description>
        <label>Service Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;S National Team</fullName>
                </value>
                <value>
                    <fullName>C3/SNI Designated</fullName>
                </value>
                <value>
                    <fullName>C3/SNI FedEx</fullName>
                </value>
                <value>
                    <fullName>C3/SNI Premier</fullName>
                </value>
                <value>
                    <fullName>C3 Sandbox</fullName>
                </value>
                <value>
                    <fullName>Designated Team</fullName>
                </value>
                <value>
                    <fullName>FI Adult</fullName>
                </value>
                <value>
                    <fullName>MN Health Plan</fullName>
                </value>
                <value>
                    <fullName>National Team</fullName>
                </value>
                <value>
                    <fullName>SNI Oxford</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs_Status__c</fullName>
        <description>Status of Family in SNI program.</description>
        <label>Special Needs Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eligible</fullName>
                    <label>Eligible</label>
                </value>
                <value>
                    <fullName>engaged</fullName>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>not eligible</fullName>
                    <label>Not Eligible</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <description>Stores Provider Team Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Team Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Message_SMS_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US2153934 - This check box is used for FamilyLink to send the Text Message (SMS) notifications to the users based on this indicator.</description>
        <label>Text Message (SMS) Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <description>Used to indicate if group has an Onshore restriction and to limit visibility of object</description>
        <label>UHG Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Quick_Notes_On__c</fullName>
        <description>Once quick notes is updated on Dashboard, this will capture date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Updated Quick Notes On</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Alternate_Id__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FEC_My_Members</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Family_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Family_Needs__c</columns>
        <columns>Family_Status__c</columns>
        <columns>Open_Cases__c</columns>
        <columns>UHG_Restriction__c</columns>
        <columns>Assigned_To_Advisor__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Family</value>
        </filters>
        <label>EFS My Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FEC_Other_Members</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Family_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Family_Needs__c</columns>
        <columns>Family_Status__c</columns>
        <columns>Open_Cases__c</columns>
        <columns>UHG_Restriction__c</columns>
        <columns>Assigned_To_Advisor__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Family</value>
        </filters>
        <label>EFS Other Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FEC_Unassigned_Members</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Family_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Family_Needs__c</columns>
        <columns>Family_Status__c</columns>
        <columns>Open_Cases__c</columns>
        <columns>UHG_Restriction__c</columns>
        <columns>Assigned_To_Advisor__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Family</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Unassigned</value>
        </filters>
        <label>EFS Unassigned Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Members</fullName>
        <columns>Family_ID__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Assigned_Advisor__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Family</value>
        </filters>
        <label>My Members</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SALES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Other_Members</fullName>
        <columns>Family_ID__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Assigned_Advisor__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Unassigned</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Family</value>
        </filters>
        <filters>
            <field>Owned_By_Me__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Other Members</label>
    </listViews>
    <listViews>
        <fullName>Provider_Affiliation</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Provider Affiliation</label>
    </listViews>
    <listViews>
        <fullName>Provider_Group</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Provider_Group</value>
        </filters>
        <label>Provider Group</label>
    </listViews>
    <listViews>
        <fullName>Provider_Group_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>IsActive__c</columns>
        <columns>Programs_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Provider_Group</value>
        </filters>
        <label>Provider Group List</label>
    </listViews>
</CustomObject>